# scav2020

./: CMakeLists.txt  scav.ini  setenv.sh
ModMngr/: modcam  modcam.cpp  modmngr  modmngr.cpp  modmngr.h  tstfilter.cpp  tstinport  tstinport.cpp  tstmodmngr.cpp
ModMngr/trash/: modmngr.h
Odometer/: Odometer.cpp  Odometer.h
ParseIniFile/: parseini.c  parseini.h  scavini.cpp  scavini.h  tstscavini  tstscavini.cpp
RpiCtrl/: RpiCtrl.cpp
hasher/: hasher  hasher.h
includes/: hasher.h  inimngr.h  loader.h  modmngr.h  objprint.h  parseini.h  print.h
loader/: hash.c  loader.h  mdl  mdl.c  mul  mul.c
modmngr/: a.out  modcalc  modcalc.cpp  modmngr.cpp  modmngr.h  modobs  modobs.cpp
parser/: inimngr.cpp  inimngr.h  parseini.c  parseini.h  scav.ini  tstinimngr  tstinimngr.cpp
src/: scav.h
src/hasher/: CMakeLists.txt  Makefile  cmake_install.cmake  hasher.c  hasher.h
src/launcher/: CMakeLists.txt  Makefile  cmake_install.cmake  launcher  launcher.cpp
src/loader/: CMakeLists.txt  Makefile  cmake_install.cmake  loader.h  mdl  mdl.c  mul.c
src/loader/trash/: tstsocketcan  tstsocketcan.c
src/modcalc/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  install_manifest.txt  modcalc  modcalc.cpp
src/modcam/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  modcam  modcam.cpp
src/modcam/output/: audit.txt
src/modmngr/: CMakeLists.txt  Makefile  cmake_install.cmake  modmngr.cpp  modmngr.h
src/modmngr/tests/: tstfilter  tstoutport  tstoutport.cpp
src/modmngr/trash/: modmngr.cpp
src/modobs/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  modobs  modobs.cpp
src/mododometer/: odometer
src/modrpictrl/: RpiCtrl.h
src/parser/: CMakeLists.txt  Makefile  cmake_install.cmake  inimngr.cpp  inimngr.h  parseini.c  parseini.h  tstinimngr  tstinimngr.cpp
src/print/: CMakeLists.txt  Makefile  cmake_install.cmake  objprint.h  print  print.cpp  print.h  tstprint  tstprint.cpp
trash/: scav.c
